--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -19,8 +19,7 @@
       </div>
       <div class="details-right">
         <div class="current-status">
-          <h4>Current Status:</h4>
-          <h3 class="status empty">Empty</h3>
+          <h3>Current Status: <span class="status empty">Empty</span></h3>
         </div>
         <div class="spot-types">
           <div class="type">
@@ -37,8 +36,12 @@
           </div>
         </div>
       </div>
-      <div class="text-add">
-        Ad
+      <div class="text-ad">
+        <h6>Ad</h6>
+        <a ng-href="http://www.amazon.com/gp/product/0449908704/ref=as_li_ss_tl?ie=UTF8&camp=1789&creative=390957&creativeASIN=0449908704&linkCode=as2&tag=coding4kicks-20">
+          <h5>The Best and the Brightest</h5>
+          <h5 class="author">- David Halberstam</h5>
+        </a>
       </div>
     </div>
 
@@ -53,7 +56,7 @@
         draggable="true"
         fit="false"
         events="eventsProperty"
-        style="height: 300px; width: 280; border: 1px solid;">
+        style="height: 260px; width: 280; border: 1px solid;">
       </div> 
     </div>
   </div>
