Add images for reviews.

--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -65,7 +65,7 @@
 
   <div class="visualize">
     <div class="crowd-factor">
-      <h3>Crowd Factor: <span class="current-time empty">Tuesday, 11pm</span></h3>
+      <h3>Current Time: <span class="current-time empty">Tuesday, 11pm</span></h3>
       <h4>73 Watchers</h4>
       <button type="button" class="btn">Add Herd Watch</button>
       <div class="crowd-visuals">
@@ -356,6 +356,7 @@
         <div class="rank">
           <h4>1.</h4>
         </div>
+        <img src="../images/peeps1.jpg">
         <div class="info"> 
           <h4 class="title">Steve S.</h4>
           <div class="rating">
@@ -376,6 +377,7 @@
         <div class="rank">
           <h4>2.</h4>
         </div>
+        <img src="../images/peeps2.jpg">
         <div class="info"> 
           <h4 class="title">Jack O.</h4>
           <div class="rating">
@@ -396,6 +398,7 @@
         <div class="rank">
           <h4>3.</h4>
         </div>
+        <img src="../images/peeps3.jpg">
         <div class="info"> 
           <h4 class="title">Whiny B.</h4>
           <div class="rating">
