--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -351,12 +351,15 @@
       </a>
 
       <hr>
-      <div class="listings">
 
-        <div class="listing">
-          <img src="../images/peeps1.jpg">
+      <div class="review-list">
+
+        <div class="review">
+          <div class="user">
+            <img src="../images/peeps1.jpg">
+            <h5 class="title">Steve S.</h5>
+          </div>
           <div class="info"> 
-            <h4 class="title">Steve S.</h4>
             <div class="rating">
               <div class="stars">
                 <img src="images/star-icon.png">
@@ -366,15 +369,17 @@
                 <img src="images/star-icon-empty.png">
               </div>
             </div>
+            <p>Tesora = King of Coffee</p>
           </div>
-          <p>Tesora = King of Coffee</p>
           <hr>
         </div>
 
-        <div class="listing">
-          <img src="../images/peeps2.jpg">
-          <div class="info"> 
-            <h4 class="title">Jack O.</h4>
+        <div class="review">
+          <div class="user"> 
+            <img src="../images/peeps2.jpg">
+            <h5 class="title">Jack O.</h5>
+          </div>
+          <div class="info">
             <div class="rating">
               <div class="stars">
                 <img src="images/star-icon.png">
@@ -384,15 +389,17 @@
                 <img src="images/star-icon-empty.png">
               </div>
             </div>
+            <p>The only coffee shop were ordering a black coffee is seen as a faux paus.</p>
           </div>
-          <p>The only coffee shop were ordering a black coffee is seen as a faux paus.</p>
           <hr>
         </div>
 
-        <div class="listing">
-          <img src="../images/peeps3.jpg">
+        <div class="review">
+          <div class="user">
+            <img src="../images/peeps3.jpg">
+            <h5 class="title">Whiny B.</h5>
+          </div>
           <div class="info"> 
-            <h4 class="title">Whiny B.</h4>
             <div class="rating">
               <div class="stars">
                 <img src="images/star-icon.png">
@@ -402,8 +409,8 @@
                 <img src="images/star-icon-empty.png">
               </div>
             </div>
+            <p>Worth the hyp.  Mint leaves in my mint coffe make me happy.  Afterwards I get a coffee headache.</p>
           </div>
-          <p>Worth the hyp.  Mint leaves in my mint coffe make me happy.  Afterwards I get a coffee headache.</p>
           <hr>
         </div>
 
