--- a/app/views/addReview.html
+++ b/app/views/addReview.html
@@ -31,7 +31,7 @@
       </div>
     </div>
 
-    <div class="control-group">
+    <div class="control-group add-rev-btn">
       <div class="controls">
         <button type="submit" class="btn">Add Review</button>
       </div>
