--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -67,7 +67,7 @@
     <div class="crowd-factor">
       <h3>Current Time: <span class="current-time empty">Tuesday, 11pm</span></h3>
       <h4>73 Watchers</h4>
-      <button type="button" class="btn">Add Herd Watch</button>
+      <button type="button" class="btn" ng-click="addWatch()">Add Herd Watch</button>
       <div class="crowd-visuals">
         <div class="timeslot">
           <h5>Morning</h5>
