Add functions for actions on add spot page.

--- a/app/views/addSpot.html
+++ b/app/views/addSpot.html
@@ -174,7 +174,7 @@
 
     <div class="control-group">
       <div class="controls">
-        <button type="submit" class="btn">Add Spot</button>
+        <button type="submit" class="btn" ng-click="addSpot()">Add Spot</button>
       </div>
     </div>
   </form>
