--- a/app/views/addWatch.html
+++ b/app/views/addWatch.html
@@ -7,7 +7,7 @@
   <form class="form-horizontal">
     
     <div class="control-group">
-      <label class="control-label">Crowd Factor</label>
+      <label class="control-label">Crowd Factor: </label>
       <div class="controls">
         <label class="checkbox inline">
           <input type="checkbox" id="inlineCheckbox1" value="empty">Empty
@@ -28,57 +28,109 @@
     </div>
 
     <div class="control-group">
-      <label class="control-label" for="inputHours">Time</label>
+      <label class="control-label" for="inputHours">Time Window: </label>
       <div class="controls">
-        -
         <select>
-          <option>15</option>
-          <option>30</option>
-          <option>45</option>
-          <option>1:00</option>
-          <option>1:15</option>
-          <option>1:30</option>
-          <option>1:45</option>
-          <option>2:00</option>
-          <option>2:15</option>
-          <option>2:30</option>
-          <option>2:45</option>
-          <option>3:00</option>
-          <option>3:15</option>
-          <option>3:30</option>
-          <option>3:45</option>
-          <option>4:00</option>
-          <option>4:15</option>
-          <option>4:30</option>
-          <option>4:45</option>
-          <option>5:00</option>
+          <option>12:00 am</option>
+          <option>12:30 am</option>
+          <option>1:00 am</option>
+          <option>1:30 am</option>
+          <option>2:00 am</option>
+          <option>2:30 am</option>
+          <option>3:00 am</option>
+          <option>3:30 am</option>
+          <option>4:00 am</option>
+          <option>4:30 am</option>
+          <option>5:00 am</option>
+          <option>5:30 am</option>
+          <option>6:00 am</option>
+          <option>6:30 am</option>
+          <option>7:00 am</option>
+          <option>7:30 am</option>
+          <option>8:00 am</option>
+          <option>8:30 am</option>
+          <option>9:00 am</option>
+          <option>9:30 am</option>
+          <option>10:00 pm</option>
+          <option>10:30 pm</option>
+          <option>11:00 pm</option>
+          <option>11:30 pm</option>
+          <option>12:00 pm</option>
+          <option>12:30 pm</option>
+          <option>1:00 pm</option>
+          <option>1:30 pm</option>
+          <option>2:00 pm</option>
+          <option>2:30 pm</option>
+          <option>3:00 pm</option>
+          <option>3:30 pm</option>
+          <option>4:00 pm</option>
+          <option>4:30 pm</option>
+          <option>5:00 pm</option>
+          <option>5:30 pm</option>
+          <option>6:00 pm</option>
+          <option>6:30 pm</option>
+          <option>7:00 pm</option>
+          <option>7:30 pm</option>
+          <option>8:00 pm</option>
+          <option>8:30 pm</option>
+          <option>9:00 pm</option>
+          <option>9:30 pm</option>
+          <option>10:00 pm</option>
+          <option>10:30 pm</option>
+          <option>11:00 pm</option>
+          <option>11:30 pm</option>
         </select>
-        Mins
-        <input type="text" id="inlineCheckbox3" value="2:45">
-        + 
+        To
         <select>
-          <option>15</option>
-          <option>30</option>
-          <option>45</option>
-          <option>1:00</option>
-          <option>1:15</option>
-          <option>1:30</option>
-          <option>1:45</option>
-          <option>2:00</option>
-          <option>2:15</option>
-          <option>2:30</option>
-          <option>2:45</option>
-          <option>3:00</option>
-          <option>3:15</option>
-          <option>3:30</option>
-          <option>3:45</option>
-          <option>4:00</option>
-          <option>4:15</option>
-          <option>4:30</option>
-          <option>4:45</option>
-          <option>5:00</option>
-        </select>
-        Mins      
+          <option>12:00 am</option>
+          <option>12:30 am</option>
+          <option>1:00 am</option>
+          <option>1:30 am</option>
+          <option>2:00 am</option>
+          <option>2:30 am</option>
+          <option>3:00 am</option>
+          <option>3:30 am</option>
+          <option>4:00 am</option>
+          <option>4:30 am</option>
+          <option>5:00 am</option>
+          <option>5:30 am</option>
+          <option>6:00 am</option>
+          <option>6:30 am</option>
+          <option>7:00 am</option>
+          <option>7:30 am</option>
+          <option>8:00 am</option>
+          <option>8:30 am</option>
+          <option>9:00 am</option>
+          <option>9:30 am</option>
+          <option>10:00 pm</option>
+          <option>10:30 pm</option>
+          <option>11:00 pm</option>
+          <option>11:30 pm</option>
+          <option>12:00 pm</option>
+          <option>12:30 pm</option>
+          <option>1:00 pm</option>
+          <option>1:30 pm</option>
+          <option>2:00 pm</option>
+          <option>2:30 pm</option>
+          <option>3:00 pm</option>
+          <option>3:30 pm</option>
+          <option>4:00 pm</option>
+          <option>4:30 pm</option>
+          <option>5:00 pm</option>
+          <option>5:30 pm</option>
+          <option>6:00 pm</option>
+          <option>6:30 pm</option>
+          <option>7:00 pm</option>
+          <option>7:30 pm</option>
+          <option>8:00 pm</option>
+          <option>8:30 pm</option>
+          <option>9:00 pm</option>
+          <option>9:30 pm</option>
+          <option>10:00 pm</option>
+          <option>10:30 pm</option>
+          <option>11:00 pm</option>
+          <option>11:30 pm</option>
+        </select>    
       </div>
     </div>
 
