Color crowd factor labels on add-watch-page.

--- a/app/views/addWatch.html
+++ b/app/views/addWatch.html
@@ -9,19 +9,19 @@
     <div class="control-group">
       <label class="control-label">Crowd Factor: </label>
       <div class="controls">
-        <label class="checkbox inline">
+        <label class="checkbox inline empty">
           <input type="checkbox" id="inlineCheckbox1" value="empty">Empty
         </label>
-        <label class="checkbox inline">
+        <label class="checkbox inline few">
           <input type="checkbox" id="inlineCheckbox2" value="few">Few
         </label>
-        <label class="checkbox inline">
+        <label class="checkbox inline ave">
           <input type="checkbox" id="inlineCheckbox3" value="average">Average
         </label>
-        <label class="checkbox inline">
+        <label class="checkbox inline crowded">
           <input type="checkbox" id="inlineCheckbox2" value="crowded">Crowded
         </label>
-        <label class="checkbox inline">
+        <label class="checkbox inline herd">
           <input type="checkbox" id="inlineCheckbox3" value="herd">Herd
         </label>
       </div>
