--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -1,7 +1,9 @@
 <div id="spot-page">
 
   <div class="title-bar clearfix">
+
     <div class="main-col">
+
       <div class="details-left">
         <h2>{{spot.name}}</h2>
         <h4>{{spot.location.address}}</h4>
@@ -13,25 +15,19 @@
           <div class="review-count">75 Reviews</div>
         </div>
       </div>
+
       <div class="details-right">
         <div class="current-status">
           <h3>Current Status: <span class="status empty">Empty</span></h3>
         </div>
         <div class="spot-types">
-          <div class="type">
-            <img class="b4cm-icon" src="../images/b4cm-icon-study.png">
-            <div class="type-text">Study</div>
-          </div>
-          <div class="type">
-            <img class="b4cm-icon" src="../images/b4cm-icon-food.png">
-            <div class="type-text">Food</div>
-          </div>
-          <div class="type">
-            <img class="b4cm-icon" src="../images/b4cm-icon-social.png">
-            <div class="type-text">Social</div>
+          <div class="type" ng-repeat="type in types">
+            <img class="b4cm-icon" ng-src="{{type[0]}}" style="height:{{type[2]}}px; width:{{type[2]}}px">
+            <div style="font-size:{{type[3]}}px;">{{type[1]}}</div>
           </div>
         </div>
       </div>
+
       <div class="text-ad">
         <h6>Ad</h6>
         <a ng-href="http://www.amazon.com/gp/product/0449908704/ref=as_li_ss_tl?ie=UTF8&camp=1789&creative=390957&creativeASIN=0449908704&linkCode=as2&tag=coding4kicks-20">
