Add current status functionality to spot-page.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -663,6 +663,10 @@ input[type='text']:focus {
       .spot-types {
         margin: 0 0 0 10px;
       }
+
+      h5 {
+        margin: -10px 0 0 20px;
+      }
     }
 
     .text-ad {
