Add html with ng-repeat to display crowd factor.

--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -62,234 +62,16 @@
       <h4>73 Watchers</h4>
       <button type="button" class="btn" ng-click="addWatch()">Add Herd Watch</button>
       <div class="crowd-visuals">
-        <div class="timeslot">
-          <h5>Morning</h5>
-          <table class="morning-table">
+        <div class="timeslot" ng-repeat="block in blocks">
+          <h5>{{block.name}}</h5>
+          <table class="{{block.name | lowercase}}-table">
             <tr>
               <th></th>
-              <th>5</th>
-              <th>6</th>
-              <th>7</th>
-              <th>8</th>
-              <th>9</th>
-              <th>10</th>
+              <th ng-repeat="hour in block.hours">{{hour}}</th>
             </tr>
-            <tr class="monday-row">
-              <td>M</td>
-              <td class="closed-square"></td>
-              <td class="empty-square"></td>
-              <td class="few-square"></td>
-              <td class="herd-square"></td>
-              <td class="ave-square"></td>
-              <td class="ave-square"></td>
-            </tr>
-            <tr class="tuesday-row">
-              <td>Tu</td>
-              <td class="closed-square"></td>
-              <td class="empty-square"></td>
-              <td class="few-square"></td>
-              <td class="herd-square"></td>
-              <td class="ave-square"></td>
-              <td class="ave-square"></td>
-            </tr>
-            <tr class="wednesday-row">
-              <td>W</td>
-              <td class="closed-square"></td>
-              <td class="empty-square"></td>
-              <td class="few-square"></td>
-              <td class="herd-square"></td>
-              <td class="few-square"></td>
-              <td class="ave-square"></td>
-            </tr>
-            <tr class="thursday-row">
-              <td>Th</td>
-              <td class="closed-square"></td>
-              <td class="empty-square"></td>
-              <td class="ave-square"></td>
-              <td class="herd-square"></td>
-              <td class="crowded-square"></td>
-              <td class="ave-square"></td>
-            </tr>
-            <tr class="friday-row">
-              <td>F</td>
-              <td class="closed-square"></td>
-              <td class="empty-square"></td>
-              <td class="ave-square"></td>
-              <td class="crowded-square"></td>
-              <td class="herd-square"></td>
-              <td class="crowded-square"></td>
-            </tr>
-            <tr class="saturday-row">
-              <td>Sa</td>
-              <td class="closed-square"></td>
-              <td class="empty-square"></td>
-              <td class="empty-square"></td>
-              <td class="ave-square"></td>
-              <td class="crowded-square"></td>
-              <td class="herd-square"></td>
-            </tr>
-            <tr class="sunday-row">
-              <td>Su</td>
-              <td class="closed-square"></td>
-              <td class="empty-square"></td>
-              <td class="empty-square"></td>
-              <td class="few-square"></td>
-              <td class="few-square"></td>
-              <td class="ave-square"></td>
-            </tr>
-          </table>
-        </div>
-        <div class="timeslot">
-          <h5>Afternoon</h5>
-          <table class="afternoon-table">
-            <tr>
-              <th></th>
-              <th>11</th>
-              <th>12</th>
-              <th>1</th>
-              <th>2</th>
-              <th>3</th>
-              <th>4</th>
-            </tr>
-            <tr class="monday-row">
-              <td>M</td>
-              <td class="empty-square"></td>
-              <td class="few-square"></td>
-              <td class="ave-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="crowded-square"></td>
-            </tr>
-            <tr class="tuesday-row">
-              <td>Tu</td>
-              <td class="empty-square"><img class="marker" src="../images/star-icon.png"></td>
-              <td class="few-square"></td>
-              <td class="crowded-square"></td>
-              <td class="herd-square"></td>
-              <td class="crowded-square"></td>
-              <td class="crowded-square"></td>
-            </tr>
-            <tr class="wednesday-row">
-              <td>W</td>
-              <td class="few-square"></td>
-              <td class="ave-square"></td>
-              <td class="crowded-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="crowded-square"></td>
-            </tr>
-            <tr class="thursday-row">
-              <td>Th</td>
-              <td class="empty-square"></td>
-              <td class="few-square"></td>
-              <td class="ave-square"></td>
-              <td class="herd-square"></td>
-              <td class="crowded-square"></td>
-              <td class="herd-square"></td>
-            </tr>
-            <tr class="friday-row">
-              <td>F</td>
-              <td class="ave-square"></td>
-              <td class="few-square"></td>
-              <td class="crowded-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="crowded-square"></td>
-            </tr>
-            <tr class="saturday-row">
-              <td>Sa</td>
-              <td class="ave-square"></td>
-              <td class="crowded-square"></td>
-              <td class="herd-square"></td>
-              <td class="crowded-square"></td>
-              <td class="crowded-square"></td>
-              <td class="crowded-square"></td>
-            </tr>
-            <tr class="sunday-row">
-              <td>Su</td>
-              <td class="few-square"></td>
-              <td class="ave-square"></td>
-              <td class="ave-square"></td>
-              <td class="crowded-square"></td>
-              <td class="crowded-square"></td>
-              <td class="ave-square"></td>
-            </tr>
-          </table>
-        </div>
-        <div class="timeslot">
-          <h5>Evening</h5>
-          <table class="evening-table">
-            <tr>
-              <th></th>
-              <th>5</th>
-              <th>6</th>
-              <th>7</th>
-              <th>8</th>
-              <th>9</th>
-              <th>10</th>
-            </tr>
-            <tr class="monday-row">
-              <td>M</td>
-              <td class="crowded-square"></td>
-              <td class="ave-square"></td>
-              <td class="few-square"></td>
-              <td class="empty-square"></td>
-              <td class="closed-square"></td>
-              <td class="closed-square"></td>
-            </tr>
-            <tr class="tuesday-row">
-              <td>Tu</td>
-              <td class="crowded-square"></td>
-              <td class="ave-square"></td>
-              <td class="few-square"></td>
-              <td class="empty-square"></td>
-              <td class="closed-square"></td>
-              <td class="closed-square"></td>
-            </tr>
-            <tr class="wednesday-row">
-              <td>W</td>
-              <td class="crowded-square"></td>
-              <td class="ave-square"></td>
-              <td class="few-square"></td>
-              <td class="empty-square"></td>
-              <td class="closed-square"></td>
-              <td class="closed-square"></td>
-            </tr>
-            <tr class="thursday-row">
-              <td>Th</td>
-              <td class="crowded-square"></td>
-              <td class="ave-square"></td>
-              <td class="few-square"></td>
-              <td class="few-square"></td>
-              <td class="closed-square"></td>
-              <td class="closed-square"></td>
-            </tr>
-            <tr class="friday-row">
-              <td>F</td>
-              <td class="crowded-square"></td>
-              <td class="ave-square"></td>
-              <td class="few-square"></td>
-              <td class="few-square"></td>
-              <td class="closed-square"></td>
-              <td class="closed-square"></td>
-            </tr>
-            <tr class="saturday-row">
-              <td>Sa</td>
-              <td class="crowded-square"></td>
-              <td class="few-square"></td>
-              <td class="few-square"></td>
-              <td class="closed-square"></td>
-              <td class="closed-square"></td>
-              <td class="closed-square"></td>
-            </tr>
-            <tr class="sunday-row">
-              <td>Su</td>
-              <td class="ave-square"></td>
-              <td class="few-square"></td>
-              <td class="few-square"></td>
-              <td class="closed-square"></td>
-              <td class="closed-square"></td>
-              <td class="closed-square"></td>
+            <tr ng-repeat="day in block.days" class="{{day.name}}-row">
+              <td>{{day.label}}</td>
+              <td ng-repeat="hour in day" class="{{hour.status}}-square"</td>
             </tr>
           </table>
         </div>
