Update total_watchers from spot info.

--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -59,7 +59,7 @@
   <div class="visualize">
     <div class="crowd-factor">
       <h3>Current Time: <span class="current-time empty">{{current_day}}, {{current_hour}}:{{current_minutes}} {{current_meridiem}}</span></h3>
-      <h4>73 Watchers</h4>
+      <h4>{{total_watchers}}</h4>
       <button type="button" class="btn" ng-click="addWatch()">Add Herd Watch</button>
       <div class="crowd-visuals">
         <div class="timeslot" ng-repeat="block in blocks">
