Switch results to reviews.

--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -146,7 +146,7 @@
         </div>
 
         <div class="more">
-          <a>More Results</a>
+          <a>More Reviews</a>
         </div>
 
       </div>
