Add comments, rename findSpot to getSpot function, add Listings to google map function on listings page.

--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -36,7 +36,7 @@
     <div class="listings main-col">
       <h6>1-10 of 100</h6>
 
-      <div class="listing" ng-click="findSpot()">
+      <div class="listing" ng-click="getSpot()">
         <div class="rank">
           <h4>1.</h4>
         </div>
