--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -2,8 +2,8 @@
   <div class="title-bar clearfix">
     <div class="main-col">
       <img class="b4cm-icon" src="../images/b4cm-icon-study.png">
-      <h2>Study</h2>
-      <h3>Palo Alto, CA 94301</h3>
+      <h2>{{listings.type}}</h2>
+      <h3>{{listings.location.city}}, {{listings.location.state_code}}</h3>
       <a  ng-href="#/addSpot">
         <button class="btn add-spot">Add Spot</button>
       </a>
