Add ng-repeat for spot listings. Create image_url in fake spots.

--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -36,6 +36,42 @@
     <div class="listings main-col">
       <h6>1-10 of 100</h6>
 
+      <div class="listing" ng-click="getSpot()" ng-repeat="spot in spots">
+        <div class="rank">
+          <h4>{{$index + 1}}</h4>
+        </div>
+        <img class="spot-pic" src="{{spot.image_url}}">
+        <div class="info"> 
+          <h4 class="title">{{spot.name}}</h4>
+          <h5 class="address">{{spot.location.address}}. {{spot.location.city}}</h5>
+          <div class="rating">
+            <div class="stars">
+              <img src="images/star-icon.png">
+              <img src="images/star-icon.png">
+              <img src="images/star-icon.png">
+              <img src="images/star-icon-half.png">
+              <img src="images/star-icon-empty.png">
+            </div>
+            <div class="review-count">75 Reviews</div>
+          </div>
+          <div class="crowd-rank">
+            <div class="crowd-bar">
+              <div class="box ave-square"><h6>11am</h6></div>
+              <div class="box few-square"></div>
+              <div class="box crowded-square"><h6>1pm</h6></div>
+              <div class="box herd-square"></div>
+              <div class="box herd-square"><h6>3pm</h6></div>
+            </div>
+            <div class="watchers">549 Watchers</div>
+          </div>
+        </div>
+        <div class="current-status">
+          <h4>Current Status:</h4>
+          <h3 class="status ave">Average</h3>
+        </div>
+        <hr>
+      </div>
+
       <div class="listing" ng-click="getSpot()">
         <div class="rank">
           <h4>1.</h4>
