Fix current time on spot page to be color of current cf_label.

--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -58,7 +58,7 @@
 
   <div class="visualize">
     <div class="crowd-factor">
-      <h3>Current Time: <span class="current-time empty">{{current_day}}, {{current_hour}}:{{current_minutes}} {{current_meridiem}}</span></h3>
+      <h3>Current Time: <span class="current-time {{current_cflabel | lowercase}}">{{current_day}}, {{current_hour}}:{{current_minutes}} {{current_meridiem}}</span></h3>
       <h4>{{total_watchers}}</h4>
       <button type="button" class="btn" ng-click="addWatch()">Add Herd Watch</button>
       <div class="crowd-visuals">
