Added functionality for current time, plus 2 hours and plus 4 hours generation to listings page crowd status bars.

--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -52,11 +52,11 @@
           </div>
           <div class="crowd-rank">
             <div class="crowd-bar">
-              <div class="box ave-square"><h6>11am</h6></div>
+              <div class="box ave-square"><h6>{{current_time}}</h6></div>
               <div class="box few-square"></div>
-              <div class="box crowded-square"><h6>1pm</h6></div>
+              <div class="box crowded-square"><h6>{{plus2_time}}</h6></div>
               <div class="box herd-square"></div>
-              <div class="box herd-square"><h6>3pm</h6></div>
+              <div class="box herd-square"><h6>{{plus4_time}}</h6></div>
             </div>
             <div class="watchers">549 Watchers</div>
           </div>
