Add function to set status for watch boxes on listings page. Bug that all are same.

--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -52,11 +52,11 @@
           </div>
           <div class="crowd-rank">
             <div class="crowd-bar">
-              <div class="box {{spot.cf_status}}-square"><h6>{{current_time}}</h6></div>
-              <div class="box {{spot.cf_status1}}-square"></div>
-              <div class="box {{spot.cf_status2}}-square"><h6>{{plus2_time}}</h6></div>
-              <div class="box {{spot.cf_status3}}-square"></div>
-              <div class="box {{spot.cf_status4}}-square"><h6>{{plus4_time}}</h6></div>
+              <div class="box {{spot.cf_status_boxes[0]}}-square"><h6>{{current_time}}</h6></div>
+              <div class="box {{spot.cf_status_boxes[1]}}-square"></div>
+              <div class="box {{spot.cf_status_boxes[2]}}-square"><h6>{{plus2_time}}</h6></div>
+              <div class="box {{spot.cf_status_boxes[3]}}-square"></div>
+              <div class="box {{spot.cf_status_boxes[4]}}-square"><h6>{{plus4_time}}</h6></div>
             </div>
             <div class="watchers">{{spot.watch_count}} Watches</div>
           </div>
